--- a/basics/index.html
+++ b/basics/index.html
@@ -8,7 +8,12 @@
 
 </head>
 <body>
+    <!--
     <h1>Hello</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis modi dolor aspernatur assumenda rem cumque quibusdam molestiae pariatur praesentium, totam sunt aliquid maiores distinctio natus perspiciatis culpa optio, voluptate eos.</p>
+    -->
+    <h1 id="myH1"></h1>
+    <p id="myP"></p>
     <script src = "index.js"></script>
 </body>
 </html>
